--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "没那么难的 React-Redux脚手架",
   "main": "app/src/main.js",
   "scripts": {
-    "build": "rimraf ./dist/build && webpack  --progress --config webpack.production.config.js",
+    "build": "webpack  --progress --config webpack.production.config.js",
     "start": "webpack-dev-server"
   },
   "dependencies": {
@@ -21,8 +21,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.6",
-    "babel-core": "6.x",
-    "babel-eslint": "6.x",
     "babel-jest": "18.0.0",
     "babel-loader": "^6.3.0",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -33,12 +31,8 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-native": "1.9.1",
     "babel-preset-stage-0": "^6.5.0",
-    "better-npm-run": "0.0.14",
-    "copy-webpack-plugin": "2.x",
-    "cross-env": "^3.2.3",
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.26.1",
-    "css-modules-require-hook": "^4.0.5",
-    "es5-shim": "^4.5.8",
     "es6-promise": "^3.2.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "fetch-ie8": "^1.4.2",
