--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,11 @@
   "plugins": [
     "transform-runtime",
     "add-module-exports",
-    "transform-decorators-legacy"
+    "transform-decorators-legacy",
+    ["import", {
+      "libraryName": "antd",
+      "style": true,
+    }]
   ]
+
 }
