--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "antd": "^2.8.2",
     "babel-runtime": "^6.11.6",
     "console-polyfill": "^0.2.2",
     "normalize.css": "^5.0.0",
@@ -26,6 +27,7 @@
     "babel-jest": "18.0.0",
     "babel-loader": "^6.3.0",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-import": "^1.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
@@ -47,6 +49,7 @@
     "postcss-loader": "^1.3.3",
     "react-hot-loader": "^1.3.1",
     "react-test-renderer": "15.4.2",
+    "simple-grid": "^1.0.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
