--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "redux-log": "^2.0.0",
     "redux-thunk": "^2.1.0",
     "swiper": "^3.4.2",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^1.0.0",
+    "es6-promise": "^3.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.6",
+    "babel-eslint": "^7.2.3",
     "babel-jest": "18.0.0",
     "babel-loader": "^6.3.0",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -37,7 +39,6 @@
     "babel-preset-stage-0": "^6.5.0",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.26.1",
-    "es6-promise": "^3.2.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "fetch-ie8": "^1.4.2",
     "file-loader": "^0.9.0",
@@ -50,6 +51,7 @@
     "react-hot-loader": "^1.3.1",
     "react-test-renderer": "15.4.2",
     "simple-grid": "^1.0.1",
+    "standard": "^10.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
