--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,9 @@
 {
   "parser": "babel-eslint",
+  "env" : {
+    "browser": true,
+    "node": true
+  },
   "extends": [
     "standard",
     "standard-jsx"
